# polars-complex

./: .gitignore  README.md  README.qmd  polars_complex.py  pyproject.toml
polars_complex/: __init__.py  api_extensions.py  arithmetic.py  extensions.py
polars_complex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: arithmetic.py  test_arithmetic.py  test_dataframe.py  test_main.py  workbook.ipynb
