[project]
name = "polars-complex"
version = "0.1.0"
description = "Utility functions for working with complex numbers in Polars"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mattias Matthiesen" }]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.1.3",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
